--- a/Domain.Data/Domain.Data.csproj
+++ b/Domain.Data/Domain.Data.csproj
@@ -2,17 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Oracle.ManagedDataAccess" Version="18.6.0" />
-    <PackageReference Include="Oracle.ManagedDataAccess.EntityFramework" Version="18.3.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="System.ComponentModel.DataAnnotations">
       <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.ComponentModel.DataAnnotations.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="Oracle.ManagedDataAccess" Version="18.6.0" />
+    <PackageReference Include="Oracle.ManagedDataAccess.EntityFramework" Version="18.3.0" />
   </ItemGroup>
 
 </Project>
