--- a/AppartmentSale/Web.config
+++ b/AppartmentSale/Web.config
@@ -85,6 +85,10 @@
         <publisherPolicy apply="no" />
         <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.4.0" newVersion="3.3.4.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
