--- a/AppartmentSale/AppartmentSale.csproj
+++ b/AppartmentSale/AppartmentSale.csproj
@@ -198,10 +198,12 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AreaController.cs" />
+    <Compile Include="Domain.Services\AreaService.cs" />
     <Compile Include="Domain.Services\StreetService.cs" />
     <Compile Include="ViewModelParser\ViewModelParser.cs" />
     <Compile Include="ViewModels\CreateAppartmentModel.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\AppartmentController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Domain.Data\AppartmentContext.cs" />
     <Compile Include="Domain.Data\Interfaces\IAppartmentRepository.cs" />
@@ -240,6 +242,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Scripts\Javascripts\Area.js" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -272,7 +275,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Appartment\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
@@ -293,7 +296,10 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Home\CreateAppartment.cshtml" />
+    <Content Include="Views\Appartment\CreateAppartment.cshtml" />
+    <Content Include="Views\Area\Index.cshtml" />
+    <Content Include="Views\Area\CreateArea.cshtml" />
+    <Content Include="Views\Area\EditArea.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
