--- a/AppartmentSale/AppartmentSale.csproj
+++ b/AppartmentSale/AppartmentSale.csproj
@@ -199,6 +199,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AreaController.cs" />
+    <Compile Include="Controllers\StreetController.cs" />
     <Compile Include="Domain.Services\AreaService.cs" />
     <Compile Include="Domain.Services\StreetService.cs" />
     <Compile Include="ViewModelParser\ViewModelParser.cs" />
@@ -236,6 +237,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Util\NinjectRegistration.cs" />
     <Compile Include="ViewModels\AppartmentViewModel.cs" />
+    <Compile Include="ViewModels\StreetViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -300,6 +302,7 @@
     <Content Include="Views\Area\Index.cshtml" />
     <Content Include="Views\Area\CreateArea.cshtml" />
     <Content Include="Views\Area\EditArea.cshtml" />
+    <Content Include="Views\Street\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
