--- a/AppartmentSale/AppartmentSale.csproj
+++ b/AppartmentSale/AppartmentSale.csproj
@@ -321,6 +321,7 @@
     <Content Include="Views\Owner\Index.cshtml" />
     <Content Include="Views\Owning\Index.cshtml" />
     <Content Include="Views\Street\CreateStreet.cshtml" />
+    <Content Include="Views\Owner\CreateOwner.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
