--- a/AppartmentSale/Web.config
+++ b/AppartmentSale/Web.config
@@ -10,8 +10,8 @@
     <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.18.3, Culture=neutral, PublicKeyToken=89b483f429c47342" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AppartmentSale-20190411081216.mdf;Initial Catalog=aspnet-AppartmentSale-20190411081216;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=sabina;Password=123456;Data Source=localhost:1521/xe" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AppartmentSale-20190411081216.mdf;Initial Catalog=aspnet-AppartmentSale-20190411081216;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=sabina;Password=123456;Data Source=localhost:1521/xe" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
